MZ-8 expanded hint text for image uploads, added note about dragging to re-order

--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -84,7 +84,12 @@
                         .Filter(".sortable")
                         .Deferred()
                     )
-                    <div class="help-block">Although all images are resized and optimized on upload we recommend using an image that is 1600 pixels wide and pre-optimized for display on the web.</div>
+                    <div class="help-block">
+                        <ul class="fa-ul">
+                            <li><i class="fa-li fa fa-asterisk"></i><strong>Size:</strong> We recommend uploading images that are at least <strong>1600px wide</strong>.</li>
+                            <li><i class="fa-li fa fa-asterisk"></i><strong>Hint:</strong> You can re-order images by dragging them above.</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
 
