MZ-18 MZ-19 Create Auction Feature With Services & Views .

--- a/src/Mzayad.Web/Areas/admin/Views/Products/Add.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Add.cshtml
@@ -29,6 +29,7 @@
             <section class="form-buttons">
                 <button type="submit" class="btn btn-default">Save And Continue</button>
             </section>
+            @Html.HiddenFor(i=>i.GoToAuction)
         }
     </div>
 </div>
