--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -104,6 +104,8 @@
             <section class="form-buttons">
                 <button type="submit" class="btn btn-default">Save</button>
             </section>
+            @Html.HiddenFor(i=>i.GoToAuction)
+            
         }
     </div>
 </div>
