--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
     <div class="col-lg-3 col-md-4 hidden-print">
         <ul class="menu-list">
             <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-fw fa-pad-right fa-users"></i>Users</a></li>
+            <li><a href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-gavel"></i>Auctions</a></li>
             <li><a href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-cube"></i>Products</a></li>
             <li><a href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
             <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li> 
             <li><a href="@Url.Action("Index", "Docs")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li> 
-            <li><a disabled href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-gavel"></i>Auctions</a></li>
             <li><a disabled href="@Url.Action("Index", "Reports")"><i class="fa fa-fw fa-pad-right fa-bar-chart"></i>Reports</a></li>
         </ul>
     </div>
