--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Create.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Create.cshtml
@@ -106,7 +106,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
-                            @Html.CheckBoxFor(i => i.Auction.BuyNowEnabled.Value, new { @id = "cbBuyNowEnabled" }) Enable Buy Now
+                            @Html.CheckBox("cbBuyNowEnabled", new { @id = "cbBuyNowEnabled", @checked = "checked" }) Enable Buy Now
                         </div>
                     </div>
                     <div class="col-md-3">
