MZ-18 MZ-21 add  /admin/auctions/edit/123 page

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
@@ -39,7 +39,7 @@
         columns.Bound(i => i.StartUtc).Format("{0:yyyy/MM/dd HH:mm}").Title("Start");
         columns.Bound(i => i.Duration).Title("Duration");
         columns.Bound(i => i.BuyNowEnabled).Title("Buy Now Enabled");
-        //columns.LinkColumn("Details", "products/edit/#=ProductId#");
+        columns.LinkColumn("Details", "auctions/edit/#=AuctionId#");
     })
 )
 
