MZ-18 moved action links above "no records" message on index pages for Auctions, Products, and Users so they will always be available

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Kendo.Mvc.UI
 @using Mzayad.Web.Extensions
+@using OrangeJetpack.Base.Web
 @model Mzayad.Web.Areas.admin.Models.Auction.IndexViewModel
 
 @{
@@ -18,17 +19,17 @@
 
 }
 
-@if (!Model.Auctions.Any())
-{
-    @Html.StatusMessage("No auction match search criteria.")
-
-    return;
-}
-
 <ul class="link-list">
     <li>@Html.ActionLink("Add Auction", "SelectProduct", "Auctions")</li>
     <li><a href="@Url.Action("DownloadExcel", "Auctions", new { search = Model.Search })"><i class="fa fa-file-excel-o fa-pad-right"></i>Download Excel</a></li>
 </ul>
+
+@if (!Model.Auctions.Any())
+{
+    @Html.StatusMessage("No auction match search criteria.", StatusMessageType.Warning)
+
+    return;
+}
 
 @(Html.Kendo().Grid(Model.Auctions)
                     .Init(ajax => ajax.Action("GetAuctions", "Auctions", new { search = Model.Search }))
