MZ-18 moved input-group-addons to after textboxes

--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -43,15 +43,15 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 }
 
 .form-control-sm {
-    width: 75px !important;
+    max-width: 75px !important;
 
     @media @media-smallscreen {
-        width: 60px !important;
+        max-width: 60px !important;
     }
 }
 
 .form-control-md {
-    width: 125px !important;
+    max-width: 125px !important;
 }
 
 .form-control-static:after {
