--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Create.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Create.cshtml
@@ -52,49 +52,49 @@
             <section>
 
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
                             <div class="form-group">
                                 @Html.LabelFor(i => i.Auction.RetailPrice, "Retail Price")
                                 <div class="input-group">
-                                    <span class="input-group-addon">KWD</span>
-                                    @Html.TextBoxFor(i => i.Auction.RetailPrice, new { @class = "form-control form-control-md", @type = "number" })
+                                    @Html.TextBoxFor(i => i.Auction.RetailPrice, new { @class = "form-control", @type = "number" })
+                                    <span class="input-group-addon">KD</span>
                                 </div>
                                 @Html.ValidationMessageFor(i => i.Auction.RetailPrice, "Please enter a auction Retail Price.")
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
                             <div class="form-group">
                                 @Html.LabelFor(i => i.Auction.MaximumBid, "Maximum Bid")
                                 <div class="input-group">
-                                    <span class="input-group-addon">KWD</span>
-                                    @Html.TextBoxFor(i => i.Auction.MaximumBid, new { @class = "form-control form-control-md", @type = "number" })
+                                    @Html.TextBoxFor(i => i.Auction.MaximumBid, new { @class = "form-control", @type = "number" })
+                                    <span class="input-group-addon">KD</span>
                                 </div>
                                 @Html.ValidationMessageFor(i => i.Auction.MaximumBid, "Please enter a auction Maximum Bid.")
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
                             <div class="form-group">
                                 @Html.LabelFor(i => i.Auction.BidIncrement, "Bid Increment")
                                 <div class="input-group">
-                                    <span class="input-group-addon">KWD</span>
-                                    @Html.TextBoxFor(i => i.Auction.BidIncrement, new { @class = "form-control form-control-md", @type = "number" })
+                                    @Html.TextBoxFor(i => i.Auction.BidIncrement, new { @class = "form-control", @type = "number" })
+                                    <span class="input-group-addon">KD</span>
                                 </div>
                                 @Html.ValidationMessageFor(i => i.Auction.BidIncrement, "Please enter a auction Bid Increment.")
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
                             <div class="form-group">
                                 @Html.LabelFor(i => i.Auction.Duration, "Bid Duration")
                                 <div class="input-group">
-                                    <span class="input-group-addon">Minutes</span>
-                                    @Html.TextBoxFor(i => i.Auction.Duration, new { @class = "form-control form-control-md", @type = "number" })
+                                    @Html.TextBoxFor(i => i.Auction.Duration, new { @class = "form-control", @type = "number" })
+                                    <span class="input-group-addon">minutes</span>
                                 </div>
                                 @Html.ValidationMessageFor(i => i.Auction.Duration, "Please enter a auction Bid Duration.")
                             </div>
@@ -115,8 +115,8 @@
                             <div class="form-group">
                                 @Html.LabelFor(i => i.Auction.BuyNowPrice, "Buy Now Price")
                                 <div class="input-group">
-                                    <span class="input-group-addon">KWD</span>
                                     @Html.TextBoxFor(i => i.Auction.BuyNowPrice, new { @class = "form-control form-control-md", @type = "number", @id = "txtBuyNowPrice" })
+                                    <span class="input-group-addon">KD</span>
                                 </div>
                             </div>
                         </div>
@@ -126,8 +126,8 @@
                             <div class="form-group">
                                 @Html.LabelFor(i => i.Auction.BuyNowQuantity, "Buy Now Quantity")
                                 <div class="input-group">
-                                    <span class="input-group-addon">Items</span>
                                     @Html.TextBoxFor(i => i.Auction.BuyNowQuantity, new { @class = "form-control form-control-md", @type = "number", @id = "txtBuyNowQuantity" })
+                                    <span class="input-group-addon">items</span>
                                 </div>
                             </div>
                         </div>
@@ -147,17 +147,17 @@
     @Scripts.Render("~/js/validate")
     @Scripts.Render("~/js/calender")
     <script type="text/javascript">
-        $('#dateTime').datetimepicker(
+        $('#Auction_StartUtc').datetimepicker(
             {
                 allowTimes: [
-                    '1:00', '1:30', '2:00', '2:30', '3:00', '3:30', '4:00', '4:30',
+                    '0:00', '0:30', '1:00', '1:30', '2:00', '2:30', '3:00', '3:30', '4:00', '4:30',
                     '5:00', '5:30', '6:00', '6:30', '7:00', '7:30', '8:00', '8:30',
                     '9:00', '9:30', '10:00', '10:30', '11:00', '11:30', '12:00', '12:30',
                     '13:00', '13:30', '14:00', '14:30', '15:00', '15:30', '16:00', '16:30',
                     '17:00', '17:30', '18:00', '18:30', '19:00', '19:30', '20:00', '20:30',
                     '21:00', '21:30', '22:00', '22:30', '23:00', '23:30'
                 ],
-                format: 'Y.m.d H:i',
+                format: 'd/m/Y H:i'
             }
         );
 
