--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -39,15 +39,15 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
   border-radius: 0;
 }
 .form-control-sm {
-  width: 75px !important;
+  max-width: 75px !important;
 }
 @media (max-width: 320px) {
   .form-control-sm {
-    width: 60px !important;
+    max-width: 60px !important;
   }
 }
 .form-control-md {
-  width: 125px !important;
+  max-width: 125px !important;
 }
 .form-control-static:after {
   content: '\0000a0';
