--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -24,6 +24,10 @@ textarea {
     resize: vertical;
 }
 
+input[disabled] {
+    cursor: default !important; 
+}
+
 input[type=number].no-spinner::-webkit-inner-spin-button, 
 input[type=number].no-spinner::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
@@ -76,6 +80,10 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 
 .form-group .form-control:last-child {
     margin-bottom: 0;
+}
+
+.form-group-disabled {
+    opacity: 0.7;
 }
 
 .form-inline .form-control:last-child {
