--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
 }
 
 @section styles {
+    @Styles.Render("~/css/calender")
     @Styles.Render("~/css/admin")
     @RenderSection("styles", false)
     <style>
@@ -32,6 +33,8 @@
 </div>
 
 @section scripts {
+    @Scripts.Render("~/js/validate")
+    @Scripts.Render("~/js/calender")
     <script src="~/scripts/kendo.web.min.js"></script>
     <script src="~/Scripts/kendo.aspnetmvc.min.js"></script>
     @Html.Kendo().DeferredScripts()
