MZ-18 added minor formatting to auctions index grid

--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -212,3 +212,10 @@ h2 {
 .bs-callout-info h4 {
   color: #00468c;
 }
+.text-yes {
+  color: #008c00;
+}
+.text-no {
+  color: #b94a48;
+}
+/*# sourceMappingURL=site.css.map */
