--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
@@ -4,8 +4,7 @@
 @model Mzayad.Web.Areas.admin.Models.Auction.IndexViewModel
 
 @{
-    ViewBag.Title = "Auctions";
-    
+    ViewBag.Title = "Auctions"; 
 }
 
 @using (Html.BeginForm(null, null, FormMethod.Get, new { @class = "form-inline form-search" }))
@@ -13,10 +12,9 @@
     <div class="form-group">
         <div class="input-group">
             <span class="input-group-addon"><i class="fa fa-search"></i></span>
-            @Html.TextBoxFor(m => m.Search, new { @class = "form-control", placeholder = "Search auction's by product name" })
+            @Html.TextBoxFor(m => m.Search, new { @class = "form-control", placeholder = "Search auctions" })
         </div>
     </div>
-
 }
 
 <ul class="link-list">
@@ -37,9 +35,9 @@
     {
         columns.Bound(i => i.Product.Name).Title("Product");
         columns.Bound(i => i.Status).ClientTemplate("#= getLabel(data) #");
-        columns.Bound(i => i.StartUtc).Format("{0:yyyy/MM/dd HH:mm}").Title("Start");
+        columns.Bound(i => i.StartUtc).Format("{0:dd/MM/yyyy HH:mm}").Title("Start");
         columns.Bound(i => i.Duration).Title("Duration");
-        columns.Bound(i => i.BuyNowEnabled).Title("Buy Now Enabled");
+        columns.Bound(i => i.BuyNowEnabled).Title("Buy Now").ClientTemplate("#= getYesNo(data.BuyNowEnabled) #"); ;
         columns.LinkColumn("Details", "auctions/edit/#=AuctionId#");
     })
 )
@@ -50,12 +48,21 @@
 
         function getLabel(auction) {
             
-            if (auction.Status == 1) {
-                return "<span class='label label-danger'>Hiddin</span>";
+            if (auction.Status === 1) {
+                return "<span class='label label-warning'>Hidden</span>";
             } else {
                 return "<span class='label label-success'>Public</span>";
             }
+        }
 
+        function getYesNo(value) {
+            console.log(value);
+
+            if (value === true) {
+                return "<span class='text-yes'>Yes</span>";
+            } else {
+                return "<span class='text-no'>No</span>";
+            }
         }
 
     </script>
