--- a/src/Mzayad.Web/Areas/admin/Views/Products/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Humanizer
-@using Kendo.Mvc.UI
+﻿@using Kendo.Mvc.UI
 @using Mzayad.Web.Extensions
 @using OrangeJetpack.Base.Web
 @model Mzayad.Web.Areas.admin.Models.Products.IndexViewModel
