--- a/src/Mzayad.Web/Content/site.less
+++ b/src/Mzayad.Web/Content/site.less
@@ -39,6 +39,11 @@ h2 {
     }
 }
 
+.instruction {
+    font-size: @font-size + 0.1;
+    margin-bottom: 2em;
+}
+
 .text-larger {
     font-size: 120%;
 }
